--- a/BlazorProject.Client/wwwroot/css/site.css
+++ b/BlazorProject.Client/wwwroot/css/site.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 .pokemon-type {
-    color:white;
+    color: white;
     display: inline-block;
     width: 75px;
     margin-bottom: 4px;
@@ -23,3 +23,42 @@ html, body {
     text-transform: uppercase;
     transition: opacity .4s;
 }
+
+.tooltipCustom {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+}
+
+    /* Tooltip text */
+    .tooltipCustom .tooltiptext {
+        visibility: hidden;
+        width: 240px;
+        background-color: black;
+        bottom: 100%;
+        left: 50%;
+        margin-left: -120px; /* Use half of the width (120/2 = 60), to center the tooltip */
+        color: #fff;
+        text-align: center;
+        padding: 5px 0;
+        border-radius: 6px;
+        /* Position the tooltip text - see examples below! */
+        position: absolute;
+        z-index: 1;
+    }
+
+    /* Show the tooltip text when you mouse over the tooltip container */
+    .tooltipCustom:hover .tooltiptext {
+        visibility: visible;
+    }
+
+    .tooltipCustom .tooltiptext::after {
+        content: " ";
+        position: absolute;
+        top: 100%; /* At the bottom of the tooltip */
+        left: 50%;
+        margin-left: -5px;
+        border-width: 5px;
+        border-style: solid;
+        border-color: black transparent transparent transparent;
+    }
