--- a/BlazorProject.Client/Pages/Pokemons/EvolutionChain.razor
+++ b/BlazorProject.Client/Pages/Pokemons/EvolutionChain.razor
@@ -1,31 +1,37 @@
 ﻿@using BlazorProject.Shared.DTO
 @inject HttpClient Http
+
 <h2>Evolution Chart</h2>
-<div class="row justify-content-center text-center mb-2">
+<div class="row justify-content-center text-center align-items-center mb-2">
     @foreach (var chain in EvolutionChainList)
     {
         <div class="col-2">
-            <PokemonImage PokemonName=@chain.Name />
+            <PokemonImage PokemonId=@chain.Id IsSprite=true Gen=@chain.SpeciesGenerationName />
         </div>
         if (chain != LastFromChain)
         {
             <div class="col-1 my-auto">
-                <i class="material-icons">arrow_right_alt</i>
+                <div class="row text-center justify-content-center">
+                    <i class="material-icons">arrow_right_alt</i>
+                </div>
+                <div class="row text-center justify-content-center">
+                    <small>@chain.EvolutionCondition</small>
+                </div>
             </div>
         }
     }
 </div>
 
 @code {
-[Parameter]
-public int PokemonId { get; set; }
-private List<DropdownPokemon> EvolutionChainList { get; set; } = new List<DropdownPokemon>();
-private DropdownPokemon LastFromChain { get; set; }
+    [Parameter]
+    public int PokemonId { get; set; }
+    private List<EvolutionChainPokemon> EvolutionChainList { get; set; } = new List<EvolutionChainPokemon>();
+    private EvolutionChainPokemon LastFromChain { get; set; }
 
-protected override async Task OnParametersSetAsync()
-{
-    EvolutionChainList = await Http.GetJsonAsync<List<DropdownPokemon>>($"api/Pokemons/{PokemonId}/evolutionChain");
-    LastFromChain = EvolutionChainList.Last();
-}
+    protected override async Task OnParametersSetAsync()
+    {
+        EvolutionChainList = await Http.GetJsonAsync<List<EvolutionChainPokemon>>($"api/Pokemons/{PokemonId}/evolutionChain");
+        LastFromChain = EvolutionChainList.Last();
+    }
 }
 
