--- a/BlazorProject.Client/Pages/Pokemons/PokemonData.razor
+++ b/BlazorProject.Client/Pages/Pokemons/PokemonData.razor
@@ -26,6 +26,7 @@
                     <td>@Pokemon.Id</td>
                 </tr>
                 <tr>
+                    @* TODO: fix de alguns textos de habilidade, como Eevee *@
                     <td style="vertical-align:middle !important" class="text-muted">Abilities:</td>
                     <td>
                         @foreach (var pokemonAbility in Pokemon.PokemonAbilities.ToList())
