-Fix dos input autocomplete -movido customExtensions para shared -evolutionCondition primeira letra para upper case -terminando o evolution chain

--- a/BlazorProject.Client/Pages/Pokemons/PokemonData.razor
+++ b/BlazorProject.Client/Pages/Pokemons/PokemonData.razor
@@ -1,5 +1,6 @@
 ﻿@using BlazorProject.Shared.DTO
 @using BlazorProject.Client.Shared.Utils
+@using BlazorProject.Shared
 @using System.Text.RegularExpressions;
 @inject HttpClient Http
 
