--- a/BlazorProject.Client/Pages/Pokemons/PokemonImage.razor
+++ b/BlazorProject.Client/Pages/Pokemons/PokemonImage.razor
@@ -1,6 +1,6 @@
 ﻿@if (IsSprite)
 {
-    <img @onerror=@ChangeSrc src=@Source class="img-fluid" />
+    <img src=@Source class="img-fluid" />
 }
 else
 {
