--- a/BlazorProject.Client/Pages/Pokemons/EvolutionChain.razor
+++ b/BlazorProject.Client/Pages/Pokemons/EvolutionChain.razor
@@ -1,4 +1,5 @@
 ﻿@using BlazorProject.Shared.DTO
+@using BlazorProject.Shared
 @inject HttpClient Http
 
 <h2>Evolution Chart</h2>
@@ -17,7 +18,24 @@
             </div>
         }
         <div class="col-2">
-            <PokemonImage PokemonId=@chain.Id IsSprite=true Gen=@chain.SpeciesGenerationName />
+            <div class="row justify-content-center align-items-center">
+                <PokemonImage PokemonId=@chain.Id IsSprite=true Gen=@chain.SpeciesGenerationName />
+            </div>
+        </div>
+    }
+</div>
+<div class="row justify-content-center text-center align-items-center">
+    @foreach (var chain in EvolutionChainList)
+    {
+        <div class="col-2 @(chain != FirstFromChain ? "offset-1" : "")">
+            <div class="text-muted">
+                #@chain.Id.ToString().PadLeft(3, '0')
+            </div>
+            <div>
+                <button style="padding:0px;" class="btn btn-link" type="button">
+                    <strong>@chain.Name.FirstCharToUpper()</strong>
+                </button>
+            </div>
         </div>
     }
 </div>
