--- a/BlazorProject.Client/Pages/Pokemons/GenerationDropdown.razor
+++ b/BlazorProject.Client/Pages/Pokemons/GenerationDropdown.razor
@@ -1,36 +1,48 @@
 ﻿@using BlazorProject.Client.Shared.Models
 @using BlazorProject.Shared.DTO
+@using BlazorProject.Shared
 @inject HttpClient Http
 @inherits RealmComponent<State>
-<div @onclick="@(() => ShowDropdown = true)" @onfocusout="@(() => ShowDropdown = false)">
-    <input class="form-control"
+@{var filteredItems = FilteredItems(SearchInput);}
+<div class="dropdown">
+    <input class="form-control dropdown-toggle"
            type="text"
+           data-toggle="dropdown"
            value=@SearchInput
            placeholder=@(Items.Count > 0 ? "Gen " + GenNumber : "Loading...")
            @oninput="@(ui => SearchInput = (string)ui.Value)" />
-    @if (ShowDropdown && FilteredItems(SearchInput).Count > 0)
-    {
-        <div class="dropdown-menu" style='max-height:200px; overflow:auto; left:initial; display:inline;' aria-labelledby="@GenNumber">
-            @foreach (var item in FilteredItems(SearchInput))
-            {
-                <button @onclick="@(() => SetPokemon(item))"
-                        class="dropdown-item"
-                        type="button">
-                    @item.Id - @item.Text
-                </button>
-            }
-        </div>
-    }
+
+    <div @ref="dropdown" class="dropdown-menu" style='max-height:200px; overflow:auto; left:initial; @(filteredItems.Count == 0 ? "display:none;" : "")' aria-labelledby="@GenNumber">
+        @if(filteredItems.Count == 0)
+        {
+            <div class="row justify-content-center align-content-center">
+                <div class="col">
+                    <span class="text-center">No Match.</span>
+                </div>
+            </div>
+        }
+        @foreach (var item in filteredItems)
+        {
+            <button @onclick="@(() => SetPokemon(item))"
+                    class="dropdown-item"
+                    type="button">
+                @item.Id - @item.Text
+            </button>
+        }
+    </div>
 </div>
 
 
 @code {
+    ElementRef dropdown;
     List<DropdownModel> Items { get; set; } = new List<DropdownModel>();
     [Parameter]
     int GenNumber { get; set; }
     public string SearchInput { get; set; } = "";
 
     private bool ShowDropdown { get; set; } = false;
+    private int SelectedIndex { get; set; } = 0;
+    private DropdownModel SelectedItem { get; set; }
 
     protected async override Task OnInitAsync()
     {
@@ -53,16 +65,15 @@
             newList.Add(new DropdownModel { Id = item.Id, Text = item.Name.FirstCharToUpper() }));
         return newList;
     }
-    private void Filter()
-    {
-
-    }
     private List<DropdownModel> FilteredItems(string input)
     {
+        if (input == "")
+        {
+            return Items;
+        }
         return Items.FindAll(p => p.Text.ToUpperInvariant()
                                    .Contains(input.ToUpperInvariant()) ||
                                    p.Id.ToString()
                                    .Contains(input));
     }
-
 }
