--- a/BlazorProject.Client/Pages/Pokemons/PokemonMove.razor
+++ b/BlazorProject.Client/Pages/Pokemons/PokemonMove.razor
@@ -1,51 +1,40 @@
 ﻿@using BlazorProject.Shared.DTO
-@using BlazorProject.Client.Shared.Utils
-@using BlazorProject.Shared
 @inject HttpClient Http
 
-<h2>Moves</h2>
-<table class="table table-hover table-sm">
-    <thead>
-        <tr>
-            <th scope="col">Level</th>
-            <th scope="col">Move</th>
-            <th scope="col">Type</th>
-            <th scope="col">Category</th>
-            <th scope="col">Power</th>
-            <th scope="col">Accuracy</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var pokemonMove in PokemonMovesList)
-        {
-            var move = pokemonMove.Move;
-            <tr>
-                <th style="vertical-align:middle !important" scope="row">@pokemonMove.Level</th>
-                <td style="vertical-align:middle !important">@move.Name</td>
-                <td style="vertical-align:middle !important">
-                    <button class="pokemon-type" 
-                            style="background-color:@Utils.GetColorHex(move.Type?.Name) !important"
-                            type="button">@move.Type?.Name
-                    </button>
-                </td>
-                <td style="vertical-align:middle !important">
-                    @{ var category = $"https://img.pokemondb.net/images/icons/{move.DamageClass.Name}.png"; }
-                    <img class="img-fixed"
-                         src=@category
-                         alt=@move.DamageClass.Name.FirstCharToUpper()
-                         title=@move.DamageClass.Name.FirstCharToUpper()
-                         style="width:39px;
-                         height:16px">
-                </td>
-                <td style="vertical-align:middle !important">@move.Power</td>
-                <td style="vertical-align:middle !important">@move.Accuracy</td>
-            </tr>
-        }
-    </tbody>
-</table>
+<h2 class="mb-3">Moves</h2>
+<div class="row">
+    <div class="col-6">
+        <div class="row">
+            @foreach (var groupList in FirstHalf)
+            {
+                <MovesList List=@groupList />
+            }
+        </div>
+    </div>
+    <div class="col-6">
+        <div class="row">
+            @foreach (var groupList in SecondHalf)
+            {
+                <MovesList List=@groupList />
+            }
+        </div>
+    </div>
+</div>
+
 
 @code {
     [Parameter]
     IEnumerable<PokemonMoves> PokemonMovesList { get; set; }
+    IEnumerable<IGrouping<string, PokemonMoves>> FirstHalf { get; set; }
+    IEnumerable<IGrouping<string, PokemonMoves>> SecondHalf { get; set; }
+    protected override void OnParametersSet()
+    {
+        var subGroups = PokemonMovesList
+          .GroupBy(p => p.LearnMethods)
+          .OrderBy(s => new List<string> { "level-up", "egg", "machine", "tutor" }.IndexOf(s.Key));
+        var halfArraySize = subGroups.ToList().Count / 2;
+        FirstHalf = subGroups.Take(halfArraySize);
+        SecondHalf = subGroups.Skip(halfArraySize);
+    }
 }
 
